--- a/databags/menu+bn.ini
+++ b/databags/menu+bn.ini
@@ -1,1 +1,23 @@
-menu+en.ini
+[about]
+path = https://www.torproject.org/about/history/
+label = About
+
+[documentation]
+path = https://2019.www.torproject.org/docs/documentation.html.en
+label = Documentation
+
+[support]
+path = https://support.torproject.org/bn/
+label = Support
+
+[community]
+path = https://community.torproject.org/
+label = Community
+
+[blog]
+path = https://blog.torproject.org
+label = Blog
+
+[donate]
+path = https://donate.torproject.org
+label = Donate
