--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,6 +4,12 @@ order = order-last
 url =  /
 language = English (en)
 
+[ar]
+direction = text-right
+order = order-last
+url = /ar/
+language = عربية (ar)
+
 [bn]
 direction = text-left
 order = order-last
@@ -16,11 +22,23 @@ order = order-last
 url = /ca/
 language = Català (ca)
 
+[cs]
+direction = text-left
+order = order-last
+url = /cs/
+language = česky (cs)
+
 [de]
 direction = text-left
 order = order-last
 url = /de/
 language = Deutsch (de)
+
+[el]
+direction = text-left
+order = order-last
+url = /el/
+language = Ελληνικά (el)
 
 [es]
 direction = text-left
@@ -40,11 +58,29 @@ order = order-last
 url = /ga/
 language = Gaeilge (ga)
 
+[he]
+direction = text-right
+order = order-first
+url = /he/
+language = עברית (he)
+
+[hu]
+direction = text-left
+order = order-last
+url = /hu/
+language = Magyar nyelv (hu)
+
 [id]
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = bahasa Indonesia (id)
+
+[is]
+direction = text-left
+order = order-last
+url = /is/
+language = Íslenska (is)
 
 [it]
 direction = text-left
@@ -52,11 +88,35 @@ order = order-last
 url = /it/
 language = Italiano (it)
 
-[pt-BR]
+[ka]
 direction = text-left
+order = order-last
+language = ქართული ენა (ka)
+url = /ka/
+
+[pl]
+direction = text-left
+order = order-last
+url = /pl/
+language = polski (pl)
+
+[pt-BR]
+|direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
+
+[pt-PT]
+direction = text-left
+order = order-last
+url = /pt-PT/
+language = Português Port. (pt-PT)
+
+[ru]
+direction = text-left
+order = order-last
+url = /ru/
+language = Русский (ru)
 
 [tr]
 direction = text-left
@@ -68,4 +128,4 @@ language = Türkçe (tr)
 direction = text-left
 order = order-last
 url = /zh-CN/
-language = 简体中文 (zh-CN)
+language = 简体字 (zh-CN)
