--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = ar,bn,ca,cs,de,el,es,fr,ga,he,hu,id,is,it,ka,pl,pt-BR,pt-PT,ru,tr,zh-CN
+translations = ar,bn,ca,cs,de,el,es,fr,ga,he,hu,id,is,it,ka,ml,pl,pt-BR,pt-PT,ru,tr,zh-CN
 i18npath = i18n
 translate_paragraphwise = False
 url_prefix= https://support.torproject.org/
