--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -94,6 +94,12 @@ order = order-last
 language = Georgian (ka)
 url = /ka/
 
+[ml]
+direction = text-left
+order = order-last
+language = മലയാളം  (ml)
+url = /ml/
+
 [pl]
 direction = text-left
 order = order-last
