add bahasa Melayu (ms)

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -100,6 +100,12 @@ order = order-last
 language = മലയാളം  (ml)
 url = /ml/
 
+[ms]
+direction = text-left
+order = order-last
+language = Melayu (ms)
+url = /ms/
+
 [pl]
 direction = text-left
 order = order-last
