add th and zh-TW, fix some locale names

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -130,6 +130,12 @@ order = order-last
 url = /ru/
 language = Русский (ru)
 
+[th]
+direction = text-left
+order = order-last
+url = /th/
+language = ภาษาไทย (th)
+
 [tr]
 direction = text-left
 order = order-last
@@ -141,3 +147,9 @@ direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体字 (zh-CN)
+
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體字 (zh-TW)
