add Lithuanian, fix Malay and zh-TW

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -94,6 +94,12 @@ order = order-last
 language = Georgian (ka)
 url = /ka/
 
+[lt]
+direction = text-left
+order = order-last
+language = lietuvių (lt)
+url = /lt/
+
 [ml]
 direction = text-left
 order = order-last
