fix config error

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -6,7 +6,7 @@ language = English (en)
 
 [ar]
 direction = text-right
-order = order-first
+order = order-last
 url = /ar/
 language = عربية (ar)
 
