update lego, add Romanian and Farsi to staging

--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = ar,bn,ca,cs,de,el,es,fr,ga,he,hu,id,is,it,ka,lt,ml,ms,pl,pt-BR,pt-PT,ru,th,tr,zh-CN,zh-TW
+translations = ar,bn,ca,cs,de,el,es,fa,fr,ga,he,hu,id,is,it,ka,lt,ml,ms,pl,pt-BR,pt-PT,ro,ru,th,tr,zh-CN,zh-TW
 i18npath = i18n
 translate_paragraphwise = False
 url_prefix= https://support.torproject.org/
