--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -46,6 +46,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
+
 [fr]
 direction = text-left
 order = order-last
@@ -129,6 +135,12 @@ direction = text-left
 order = order-last
 url = /pt-PT/
 language = Português Port. (pt-PT)
+
+[ro]
+direction = text-left
+order = order-last
+url = /ro/
+language = Română (ro)
 
 [ru]
 direction = text-left
