--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -80,7 +80,7 @@ language = Magyar nyelv (hu)
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = bahasa Indonesia (id)
 
 [is]
 direction = text-left
@@ -125,7 +125,7 @@ url = /pl/
 language = polski (pl)
 
 [pt-BR]
-|direction = text-left
+direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
