--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -46,6 +46,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
+
 [fr]
 direction = text-left
 order = order-last
@@ -94,6 +100,24 @@ order = order-last
 language = ქართული ენა (ka)
 url = /ka/
 
+[lt]
+direction = text-left
+order = order-last
+language = lietuvių (lt)
+url = /lt/
+
+[ml]
+direction = text-left
+order = order-last
+language = മലയാളം  (ml)
+url = /ml/
+
+[ms]
+direction = text-left
+order = order-last
+language = Melayu (ms)
+url = /ms/
+
 [pl]
 direction = text-left
 order = order-last
@@ -101,7 +125,7 @@ url = /pl/
 language = polski (pl)
 
 [pt-BR]
-|direction = text-left
+direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
@@ -112,11 +136,23 @@ order = order-last
 url = /pt-PT/
 language = Português Port. (pt-PT)
 
+[ro]
+direction = text-left
+order = order-last
+url = /ro/
+language = Română (ro)
+
 [ru]
 direction = text-left
 order = order-last
 url = /ru/
 language = Русский (ru)
+
+[th]
+direction = text-left
+order = order-last
+url = /th/
+language = ภาษาไทย (th)
 
 [tr]
 direction = text-left
@@ -129,3 +165,9 @@ direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体字 (zh-CN)
+
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體字 (zh-TW)
