--- a/.htaccess
+++ b/.htaccess
@@ -14,4 +14,4 @@ RewriteRule ^ga-IE/(.*) /ga$1 [R=302,L]
 # Rewrites for languages that have a Tor Browser release
 # but don't have a support page
 # this languages are the translation priority for the support portal!
-RewriteRule ^(da|fa|ja|ko|nb-NO|nl|sv-SE|vi|zh-TW)/(.*) /$2 [R=302,L]
+RewriteRule ^(da|ja|ko|nb-NO|nl|sv-SE|vi)/(.*) /$2 [R=302,L]
