Finish glossary first iteration

--- a/models/word.ini
+++ b/models/word.ini
@@ -1,5 +1,5 @@
 [model]
-name = GlossaryTerm
+name = Word
 label = {{ this.term }}
 translate = True
 
@@ -8,22 +8,22 @@ label = Term
 type = string
 translate = True
 
+[fields.original_term]
+label = OriginalTerm
+type = string
+translate = False
+
 [fields.definition]
 label = Definition
 type = markdown
 translate = True
 
 [fields.spelling]
-label = SpellingNotes
+label = Spelling
 type = markdown
 translate = True
 
 [fields.translation]
-label = TranslationNotes
+label = Translation
 type = markdown
 translate = True
-
-[fields.seo_slug]
-label = Seo Slug
-type = string
-translate = False
