start for rpm section

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -58,6 +58,11 @@ path = #apt
 control = apt
 label = Debian Repository
 
+[rpm]
+path = #rpm
+control = rpm
+label = Tor rpm packages
+
 [misc]
 path = #misc
 control = misc
