Abuse FAQ topics

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -68,6 +68,11 @@ path = #misc
 control = misc
 label = Misc
 
+[abuse]
+path = #abuse
+control = abuse
+label = Abuse FAQs
+
 [get-in-touch]
 path = #getintouch
 control = getintouch
