Added the Tor Metrics label to the side bar on support.tpo Update topics.ini

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -48,6 +48,11 @@ path = #onionservices
 control = onionservices
 label = Onion Services
 
+[metrics]
+path = #metrics
+control = metrics
+label = Tor Metrics
+
 [apt]
 path = #apt
 control = apt
