Route topics links to topic page

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -1,74 +1,63 @@
 [faq]
-path = #faq
-control = faq
+path = faq
 label = Most Frequently Asked Questions
 
 [about]
-path = #about
-control = about
+path = about
 label = About Tor
 
 [tbb]
-path = #tbb
-control = tbb
+path = tbb
 label = Tor Browser
 
 [tormessenger]
-path = #tormessenger
-control = tormessenger
+path = tormessenger
 label = Tor Messenger
 
 [tormobile]
-path = #tormobile
-control = tormobile
+path = tormobile
 label = Tor Mobile
 
 [gettor]
-path = #gettor
-control = gettor
+path = gettor
 label = GetTor
 
 [connecting]
-path = #connectingtotor
-control = connectingtotor
+path = connectingtotor
 label = Connecting To Tor
 
 [censorship]
-path = #censorship
-control = censorship
+path = censorship
 label = Censorship
 
 [https]
-path = #https
-control = https
+path = https
 label = HTTPS
 
 [operators]
-path = #operators
-control = operators
+path = operators
 label = Operators
 
 [onionservices]
-path = #onionservices
-control = onionservices
+path = onionservices
 label = Onion Services
 
 [apt]
-path = #apt
-control = apt
+path = apt
 label = Debian Repository
 
 [misc]
-path = #misc
-control = misc
+path = misc
 label = Misc
 
 [get-in-touch]
-path = #getintouch
-control = getintouch
+path = get-in-touch
 label = Get in Touch
 
 [glossary]
-path = /glossary
-control = glossary
+path = glossary
 label = Glossary
+
+[tormessenger]
+path = tormessenger
+label = Tor Messenger
