--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -1,63 +1,74 @@
 [faq]
 path = faq
+control = faq
 label = Most Frequently Asked Questions
 
 [about]
 path = about
+control = about
 label = About Tor
 
 [tbb]
 path = tbb
+control = tbb
 label = Tor Browser
 
 [tormessenger]
 path = tormessenger
+control = tormessenger
 label = Tor Messenger
 
 [tormobile]
 path = tormobile
+control = tormobile
 label = Tor Mobile
 
 [gettor]
 path = gettor
+control = gettor
 label = GetTor
 
 [connecting]
-path = connectingtotor
+path = connecting
+control = connectingtotor
 label = Connecting To Tor
 
 [censorship]
 path = censorship
+control = censorship
 label = Censorship
 
 [https]
 path = https
+control = https
 label = HTTPS
 
 [operators]
 path = operators
+control = operators
 label = Operators
 
 [onionservices]
 path = onionservices
+control = onionservices
 label = Onion Services
 
 [apt]
 path = apt
+control = apt
 label = Debian Repository
 
 [misc]
 path = misc
+control = misc
 label = Misc
 
 [get-in-touch]
 path = get-in-touch
+control = getintouch
 label = Get in Touch
 
 [glossary]
 path = glossary
+control = glossary
 label = Glossary
-
-[tormessenger]
-path = tormessenger
-label = Tor Messenger
