Capitalize and make singular 'Tor rpm packages'

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -61,7 +61,7 @@ label = Debian Repository
 [rpm]
 path = #rpm
 control = rpm
-label = Tor rpm packages
+label = Tor RPM Package
 
 [misc]
 path = #misc
