Update to RPM Repository

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -61,7 +61,7 @@ label = Debian Repository
 [rpm]
 path = #rpm
 control = rpm
-label = Tor RPM Package
+label = RPM Repository
 
 [misc]
 path = #misc
