Russian locale is ready

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -58,6 +58,12 @@ order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
 
+[ru]
+direction = text-left
+order = order-last
+url = /ru/
+language = Русский (ru)
+
 [tr]
 direction = text-left
 order = order-last
