Add alternative design in topics

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -87,3 +87,8 @@ label = Glossary
 path = tormessenger
 control = tormessenger
 label = Tor Messenger
+
+[alternate-designs]
+path = alternatedesigns
+control = alternatedesigns
+label = Alternate Designs
