Add "You should let the network pick the path, not the client."
See: tpo/web/support#230

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -67,3 +67,8 @@ label = Misc
 path = #getintouch
 control = getintouch
 label = Get in Touch
+
+[alternate-designs]
+path = #alternatedesigns
+control = alternatedesigns
+label = Alternate Designs
