--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,18 +40,17 @@ pages:
     - echo 'checking out translations'
     - rm -rf i18n
     - git clone --branch support-portal https://git.torproject.org/translation.git i18n
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - pip3 install polib
     - echo 'reinstalling plugins to have last version'
     - lektor plugins reinstall
     - echo 'building lektor 3 times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
     - echo 'lets see if there are any updates in the strings for translation'
     - l10n/bin/check_po_status.py support-portal
+    - echo 'lets check translations links'
+    - pip3 install polib
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
+    - l10n/bin/check_markdown_links.py i18n/
   artifacts:
     paths:
       - public
-
-check_l10n:
-  script:
-    - l10n/bin/check_markdown_links.py i18n/
+      - i18n
