--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -89,6 +89,6 @@ control = tormessenger
 label = Tor Messenger
 
 [alternate-designs]
-path = #alternatedesigns
+path = alternate-designs
 control = alternatedesigns
 label = Alternate Designs
