--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,10 @@ cache:
 variables:
     GIT_SUBMODULE_STRATEGY: recursive
 
-before_script:
+pages:
+  script:
     - *apt-template
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector -y
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector python3-polib -y
     - pip3 install virtualenv
     - virtualenv venv
     - source venv/bin/activate
@@ -39,22 +40,17 @@ before_script:
     - echo 'checking out translations'
     - rm -rf i18n
     - git clone --branch support-portal https://git.torproject.org/translation.git i18n
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - pip3 install polib
-
-pages:
-  script:
     - echo 'reinstalling plugins to have last version'
     - lektor plugins reinstall
     - echo 'building lektor 3 times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - echo 'lets see if there are any updates in the strings for translation'
     - l10n/bin/check_po_status.py support-portal
+    - echo 'lets check translations links'
+    - pip3 install polib
+    - l10n/bin/check_markdown_links.py i18n/
   artifacts:
     paths:
       - public
       - i18n
-
-check_l10n:
-  script:
-    - l10n/bin/check_markdown_links.py i18n/
