Add little-t-tor topic

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -87,3 +87,8 @@ label = Tor Messenger
 path = alternate-designs
 control = alternatedesigns
 label = Alternate Designs
+
+[little-t-tor]
+path = little-t-tor
+control = little-t-tor
+label = little-t-tor
