i #255: Change "Operators" to "Relay Operators"

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -33,10 +33,10 @@ path = https
 control = https
 label = HTTPS
 
-[operators]
-path = operators
-control = operators
-label = Operators
+[relay-operators]
+path = relay-operators
+control = relay-operators
+label = Relay Operators
 
 [onionservices]
 path = onionservices
