--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,5 +110,7 @@ check_l10n:
   script:
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext i18nspector python3-polib ca-certificates -y
     - echo 'lets see if there are any broken links on the translations'
+    - rm -rf l10n
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - l10n/bin/check_markdown_links.py i18n/
 
