--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,13 +77,9 @@ check_new_strings:
   needs: [pages]
   allow_failure: true
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: '$CI_COMMIT_BRANCH == "translations"'
       when: never
-    - changes:
-      - content/**/*.lr
-      - templates/**/*
   script:
     - *apt-template
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext git python3-dev python3-setuptools i18nspector python3-polib python3-requests ca-certificates apt-utils -y
@@ -114,5 +110,7 @@ check_l10n:
   script:
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext i18nspector python3-polib ca-certificates -y
     - echo 'lets see if there are any broken links on the translations'
+    - rm -rf l10n
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - l10n/bin/check_markdown_links.py i18n/
 
