--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,28 @@ image: debian:buster-slim
            'Dpkg::Use-Pty "0";' \
            "Dir::Cache::Archives \"${APT_CACHE_DIR}\"; " \
         >> /etc/apt/apt.conf.d/99gitlab
-      apt-get update -qq
-      apt-get upgrade -qy
+      DEBIAN_FRONTEND=noninteractive apt-get update -qq
+      DEBIAN_FRONTEND=noninteractive apt-get upgrade -qy
+      DEBIAN_FRONTEND=noninteractive apt-get install git apt-utils ca-certificates -y
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-  TRANSLATION_BRANCH: "support-portal"
+
+workflow:
+  rules:
+    - if: $CI_PROJECT_NAME == "support"
+      variables:
+        TRANSLATION_BRANCH: "support-portal"
+    - if: $CI_PROJECT_NAME == "manual"
+      variables:
+        TRANSLATION_BRANCH: "tbmanual-contentspot"
+    - if: $CI_PROJECT_NAME == "community"
+      variables:
+        TRANSLATION_BRANCH: "communitytpo-contentspot"
+    - if: $CI_PROJECT_NAME == "tpo"
+      variables:
+        TRANSLATION_BRANCH: "tpo-web"
 
 
 stages:
@@ -43,16 +58,15 @@ pages:
   stage: build
   script:
     - *apt-template
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector apt-utils ca-certificates -y
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip  python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography -y
     - pip3 install virtualenv
     - virtualenv venv
     - source venv/bin/activate
     - pip3 install lektor
     - echo 'checking out translations'
     - rm -rf i18n
-    - git clone --branch $TRANSLATION_BRANCH https://git.torproject.org/translation.git i18n
+    - git clone --branch $TRANSLATION_BRANCH --depth=1 https://git.torproject.org/translation.git i18n
     - echo 'reinstall lektor plugins'
-    - lektor project-info --output-path
     - lektor plugins reinstall
     - echo 'building lektor 3 more times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
@@ -61,9 +75,12 @@ pages:
       - public
       - i18n
   rules:
-    - when: always
+    - if: $TRANSLATION_BRANCH
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
+      when: never
 
-check_new_strings:
+new_strings:
   cache:
     key: $CI_PROJECT_PATH_SLUG.${CI_COMMIT_REF_SLUG}
     paths:
@@ -72,27 +89,27 @@ check_new_strings:
       - apt-cache
       - venv
       - .cache/pip
-
   stage: test_l10n
   needs: [pages]
   allow_failure: true
   rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: '$CI_COMMIT_BRANCH == "translations"'
+    - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
       when: never
   script:
     - *apt-template
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext git python3-dev python3-setuptools i18nspector python3-polib python3-requests ca-certificates apt-utils -y
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - echo 'lets see if there are any updates in the strings for translation'
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext  python3-dev python3-setuptools i18nspector python3-polib python3-requests -y
+    - git clone --depth=1 https://gitlab.torproject.org/tpo/community/l10n.git
+    - echo 'lets see if there are any UPDATES ON THE STRINGS for translation after this changes'
     - l10n/bin/check_po_status.py $TRANSLATION_BRANCH
   artifacts:
     paths:
       - public
       - i18n
-      - l10n
 
-check_l10n:
+l10n_QA:
   allow_failure: true
   cache:
     key: $CI_PROJECT_PATH_SLUG.${CI_COMMIT_REF_SLUG}
@@ -104,13 +121,22 @@ check_l10n:
       - i18n
       - .cache/pip
   stage: test_l10n
-  needs: [pages]
-  only:
-    - translations
+  needs: [new_strings]
   script:
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext i18nspector python3-polib ca-certificates -y
-    - echo 'lets see if there are any broken links on the translations'
+    - *apt-template
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-polib -y
+    - echo '==START Translations QA=='
     - rm -rf l10n
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - l10n/bin/check_markdown_links.py i18n/
+    - git clone --depth=1 https://gitlab.torproject.org/tpo/community/l10n.git
+    - echo 'lets see if there are any problems with the translations'
+    - l10n/bin/check_common_errors.py i18n/
+    - echo 'Enabled translations and their completion'
+    - l10n/bin/check_completion.py
 
+build_tests_page:
+  stage: test_l10n
+  allow_failure: true
+  trigger: tpo/community/l10n
+  rules:
+    - changes:
+      - i18n/contents.pot
