--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,5 +2,7 @@ variables:
   TRANSLATION_BRANCH: "support-portal"
 
 include:
-  project: tpo/tpa/ci-templates
-  file: lektor.yml
+  - project: tpo/tpa/ci-templates
+    file: lektor.yml
+  - project: tpo/tpa/ci-templates
+    file: static-shim-deploy.yml
