--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 variables:
   SITE_URL: support.torproject.org
+  STAGING_URL: support.staging.torproject.net
   TRANSLATION_BRANCH: support-portal
 
 include:
