Add a button linking to the forum

--- a/models/question.ini
+++ b/models/question.ini
@@ -21,3 +21,8 @@ translate = False
 [fields.key]
 label = Key
 type = sort_key
+
+[fields.forum_link]
+label = Forum Link
+type = url
+translate = False
