--- a/models/showcase.ini
+++ b/models/showcase.ini
@@ -11,3 +11,8 @@ label = Title
 type = string
 size = large
 translate = True
+
+[fields.forum_link]
+label = Forum Link
+type = url
+translate = False
