--- a/models/topic.ini
+++ b/models/topic.ini
@@ -21,3 +21,8 @@ type = sort_key
 label = Seo Slug
 type = string
 translate = False
+
+[fields.forum_link]
+label = Forum Link
+type = url
+translate = False
