--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = bn,ca,de,es,fr,ga,id,it,pt-BR,ru,tr,uk,zh-CN
+translations = bn,ca,de,es,fa,fr,ga,id,it,ko,pt-BR,ro,ru,tr,uk,zh-CN
 i18npath = i18n
 translate_paragraphwise = False
 url_prefix = https://support.torproject.org/
