--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -28,6 +28,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
+
 [fr]
 direction = text-left
 order = order-last
@@ -52,11 +58,23 @@ order = order-last
 url = /it/
 language = Italiano (it)
 
+[ko]
+direction = text-left
+order = order-last
+language = 한국어(ko)
+url = /ko/
+
 [pt-BR]
 direction = text-left
 order = order-last
 url = /pt-BR/
 language = Português Br. (pt-BR)
+
+[ro]
+direction = text-left
+order = order-last
+url = /ro/
+language = Română (ro)
 
 [ru]
 direction = text-left
