add mullvad browser faqs

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -87,3 +87,8 @@ label = Alternate Designs
 path = little-t-tor
 control = little-t-tor
 label = little-t-tor
+
+[mullvad-browser]
+path = mullvad-browser
+control = mullvadbrowser
+label = Mullvad Browser
