add Swahili, remove Bengali, Catalan and Irish because of not enough translations (20% or less)

--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = bn,ca,de,es,fa,fr,ga,id,it,ko,pt-BR,ro,ru,tr,uk,zh-CN
+translations = de,es,fa,fr,id,it,ko,pt-BR,ro,ru,sw,tr,uk,zh-CN
 i18npath = i18n
 translate_paragraphwise = False
 url_prefix = https://support.torproject.org/
