--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,18 +4,6 @@ order = order-last
 url =  /
 language = English (en)
 
-[bn]
-direction = text-left
-order = order-last
-url = /bn/
-language = বাংলা ভাষা (bn)
-
-[ca]
-direction = text-left
-order = order-last
-url = /ca/
-language = Català (ca)
-
 [de]
 direction = text-left
 order = order-last
@@ -39,12 +27,6 @@ direction = text-left
 order = order-last
 url = /fr/
 language = Français (fr)
-
-[ga]
-direction = text-left
-order = order-last
-url = /ga/
-language = Gaeilge (ga)
 
 [id]
 direction = text-left
@@ -81,6 +63,12 @@ direction = text-left
 order = order-last
 url = /ru/
 language = Русский (ru)
+
+[sw]
+direction = text-left
+order = order-last
+url = /sw/
+language = Kiswahili (sw)
 
 [tr]
 direction = text-left
