--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -4,6 +4,12 @@ order = order-last
 url =  /
 language = English (en)
 
+[ar]
+direction = text-right
+order = order-last
+url = /ar/
+language = ﻉﺮﺒﻳﺓ (ar)
+
 [de]
 direction = text-left
 order = order-last
@@ -82,8 +88,20 @@ order = order-last
 url = /uk/
 language  = українська (uk)
 
+[vi]
+direction = text-left
+order = order-last
+url = /vi/
+language  = Tiếng Việt (vi)
+
 [zh-CN]
 direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体中文 (zh-CN)
+
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體中文 (zh-TW)
