--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = de,es,fa,fr,id,it,ko,pt-BR,ro,ru,sw,tr,uk,zh-CN
+translations = ar,de,es,fa,fr,id,it,ko,pt-BR,ro,ru,sw,tr,uk,vi,zh-CN,zh-TW
 i18npath = i18n
 translate_paragraphwise = False
 url_prefix = https://support.torproject.org/
