correct name of Arabic language. part of tpo/community/l10n#40116

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -8,7 +8,7 @@ language = English (en)
 direction = text-right
 order = order-last
 url = /ar/
-language = ﻉﺮﺒﻳﺓ (ar)
+language = (ar) العربية
 
 [de]
 direction = text-left
