better to align all the languages the same.

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -8,7 +8,7 @@ language = English (en)
 direction = text-right
 order = order-last
 url = /ar/
-language = (ar) العربية
+language =  العربية (ar)
 
 [de]
 direction = text-left
