--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -34,6 +34,12 @@ order = order-last
 url = /fr/
 language = Français (fr)
 
+[ga]
+direction = text-left
+order = order-last
+url = /ga/
+language = Gaeilge (ga)
+
 [id]
 direction = text-left
 order = order-last
@@ -46,11 +52,23 @@ order = order-last
 url = /it/
 language = Italiano (it)
 
+[ja]
+direction = text-left
+order = order-last
+language = 日本語 (ja)
+url = /ja/
+
 [ko]
 direction = text-left
 order = order-last
 language = 한국어(ko)
 url = /ko/
+
+[pl]
+direction = text-left
+order = order-last
+url = /pl/
+language = polski (pl)
 
 [pt-BR]
 direction = text-left
