--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
 
 include:
   - project: tpo/tpa/ci-templates
+    ref: lektor-marble
     file:
       - lektor.yml
       - static-shim-deploy.yml
