--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -2,60 +2,60 @@
 direction = text-left
 order = order-last
 url =  /
-language = English (en)
+language = English
 
 [ar]
 direction = text-right
 order = order-last
 url = /ar/
-language =  العربية (ar)
+language =  العربية
 
 [de]
 direction = text-left
 order = order-last
 url = /de/
-language = Deutsch (de)
+language = Deutsch
 
 [es]
 direction = text-left
 order = order-last
 url = /es/
-language = Español (es)
+language = Español
 
 [fa]
 direction = text-right
 order = order-last
 url = /fa/
-language = فارسی (fa)
+language = فارسی
 
 [fr]
 direction = text-left
 order = order-last
 url = /fr/
-language = Français (fr)
+language = Français
 
 [ga]
 direction = text-left
 order = order-last
 url = /ga/
-language = Gaeilge (ga)
+language = Gaeilge
 
 [id]
 direction = text-left
 order = order-last
 url = /id/
-language = Indonesia (id)
+language = Indonesia
 
 [it]
 direction = text-left
 order = order-last
 url = /it/
-language = Italiano (it)
+language = Italiano
 
 [ja]
 direction = text-left
 order = order-last
-language = 日本語 (ja)
+language = 日本語
 url = /ja/
 
 [ko]
@@ -68,58 +68,58 @@ url = /ko/
 direction = text-left
 order = order-last
 url = /pl/
-language = polski (pl)
+language = polski
 
 [pt-BR]
 direction = text-left
 order = order-last
 url = /pt-BR/
-language = Português Br. (pt-BR)
+language = Português Br.
 
 [ro]
 direction = text-left
 order = order-last
 url = /ro/
-language = Română (ro)
+language = Română
 
 [ru]
 direction = text-left
 order = order-last
 url = /ru/
-language = Русский (ru)
+language = Русский
 
 [sw]
 direction = text-left
 order = order-last
 url = /sw/
-language = Kiswahili (sw)
+language = Kiswahili
 
 [tr]
 direction = text-left
 order = order-last
 url = /tr/
-language = Türkçe (tr)
+language = Türkçe
 
 [uk]
 direction = text-left
 order = order-last
 url = /uk/
-language  = українська (uk)
+language  = українська
 
 [vi]
 direction = text-left
 order = order-last
 url = /vi/
-language  = Tiếng Việt (vi)
+language  = Tiếng Việt
 
 [zh-CN]
 direction = text-left
 order = order-last
 url = /zh-CN/
-language = 简体中文 (zh-CN)
+language = 简体中文
 
 [zh-TW]
 direction = text-left
 order = order-last
 url = /zh-TW/
-language = 正體中文 (zh-TW)
+language = 正體中文
