--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -1,17 +1,25 @@
 RewriteEngine On
 
-# forward requests in /en and /en-US to the root folder
-RewriteRule ^(en|en-US)$ / [R=302,L]
-RewriteRule ^(en|en-US)/(.*) /$2 [R=302,L]
+# Redirects for languages
 
-# Rewrites for languages that have a different mapping in the page than in TBB
-RewriteRule ^(es-ES|es-MX|es-CO)(.*) /es$2 [R=302,L]
+# if page doesn't exist and is prefixed with a language code
+# set environment variables to attempt a redirect, see rules below
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-d
+RewriteCond "%{REQUEST_URI}" "^/([a-z]{2})(?:-[A-Z]{2})?/(.*)" [OR]
+RewriteCond "%{REQUEST_URI}" "^/([a-z]{2})(?:-[A-Z]{2})?$"
+RewriteRule ^ - [E=langredir:1,E=langredir_code:%1,E=langredir_subpath:%2]
 
-# we have only one translation for this locales
-RewriteRule ^(bn-BD|bn-IN)(.*) /bn$2 [R=302,L]
-RewriteRule ^ga-IE(.*) /ga$1 [R=302,L]
+# redirect if the language code without region variant exists
+# eg. redirect /es-AR to /es
+RewriteCond %{ENV:langredir} =1
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_code}/%{ENV:langredir_subpath} -f [OR]
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_code}/%{ENV:langredir_subpath} -d
+RewriteRule ^ /%{ENV:langredir_code}/%{ENV:langredir_subpath} [R=302,L]
 
-# Rewrites for languages that have a Tor Browser release
-# but don't have a support page
-# this languages are the translation priority for the support portal!
-RewriteRule ^(bn|ca|cs|da|el|he|hu|is|ka|ml|ms|mk|nb-NO|nl|sq|sv-SE)/(.*) /$2 [R=302,L]
+# redirect if the translation requested isn't available
+# to the default language version of the page
+RewriteCond %{ENV:langredir} =1
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_subpath} -f [OR]
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_subpath} -d
+RewriteRule ^ /%{ENV:langredir_subpath} [R=302,L]
